# dcr-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: address.rs  airgap.rs  amount.rs  blake256.rs  hashing.rs  hd.rs  lib.rs  network.rs  sighash.rs  sign.rs  tx.rs
tests/: airgap_review.rs  onchain_sighash.rs  vectors.rs
