# dcr-rs
#
# The hard rule here: we hand-roll NOTHING that touches elliptic-curve math or
# standard KDFs. Those come from audited crates. We only own Decred-specific
# glue (BLAKE-256, sighash byte layout, tx serialization, address encoding,
# derivation orchestration, airgap format).

[package]
name = "dcr-rs"
version = "0.2.0"
edition = "2021"
description = "Decred (DCR) primitives: BLAKE-256, addresses, HD keys, transaction wire format, and SigHashAll signing"
license = "ISC"
repository = "https://github.com/jzbz/dcr-rs"
keywords = ["decred", "dcr", "cryptocurrency", "blake256", "bip32"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[features]
default = ["std", "mnemonic", "airgap"]
# Links std into dependencies and implements std::error::Error. Disable for
# no_std targets (the crate itself only ever needs `alloc`).
std = [
    "secp256k1/std",
    "bs58/std",
    "sha2/std",
    "hmac/std",
    "ripemd/std",
    "bip39?/std",
    "minicbor?/std",
]
# BIP39 mnemonic/entropy -> seed expansion (ExtPrivKey::from_entropy/from_phrase).
mnemonic = ["dep:bip39"]
# The CBOR air-gapped sign-request format shared with the KeyOS and Keystone
# Decred signers.
airgap = ["dep:minicbor"]

[dependencies]
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
ripemd = { version = "0.1", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
zeroize = { version = "1", default-features = false }
bip39 = { version = "2.1", default-features = false, features = ["alloc", "zeroize"], optional = true }
# Pinned to the 0.24 line: the KeyOS/Keystone airgap format (FORMAT_VERSION 1)
# was written against it, so the derived CBOR layout stays byte-identical.
minicbor = { version = "0.24", default-features = false, features = ["alloc", "derive"], optional = true }

[dev-dependencies]
hex = "0.4"
